style(table): add scroll on table and change style

--- a/public/locales/ka/translation.json
+++ b/public/locales/ka/translation.json
@@ -11,7 +11,7 @@
     "Loading":"მიმდინარეობს ჩატვირთვა",
     "Recent Movies quotes":"ბოლო ფილმების ციტატები",
     "Adminpanel":"მართვის მენიუ",
-    "Dashboard": "დაფა",
+    "Dashboard": "სამუშაო სივრცე",
     "View Website":"საიტზე გადასვლა",
     "CORE":"ბირთვი",
     "INTERFACE":"ინტერფეისი",
