refactor(lang): add english world fix(singlequote): data load function

--- a/public/locales/ka.json
+++ b/public/locales/ka.json
@@ -42,7 +42,9 @@
     "Quote_en":"ციტატა ინგლისურად",
     "Quote_ka":"ციტატა ქართულად",
     "image":"სურათი",
-    "action": "განახლება/წაშლა"
+    "action": "განახლება/წაშლა",
+
+    "Choose a movie": "აირჩიე ფილმი"
 
 }
 
