--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -45,6 +45,13 @@
     "choose_image":"choose image",
     "action": "action",
 
+    "failed_to_create": "Failed to create",
+    "failed_to_update": "Failed to updated",
+    "successfully_created!":"Successfully created!",
+    "successfully_updated!":"Successfully updated!",
+    "network_error": "Network Error",
+    "method_not_allowed":"Method Not Allowed",
+
     "Choose a movie": "Choose a movie"
 
 }
