chore: add one word in language file

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -26,6 +26,7 @@
     "Create":"Create",
     "Update": "Update",
     "total" : "total",
+    "image":"image",
 
     "Value is required":"Value is required",
     "The film is not selected" : "The film is not selected",
