--- a/public/locales/ka.json
+++ b/public/locales/ka.json
@@ -26,6 +26,7 @@
     "Create":"დამატება",
     "Update": "განახლება",
     "total" : "სულ",
+    "image":"სურათი",
 
     "Value is required":"ველი ცარიელია",
     "The film is not selected" : "ფილმი არ არის არჩეული",
