--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -50,7 +50,7 @@
     "failed_to_update": "Failed to updated",
     "successfully_created!":"Successfully created!",
     "successfully_updated!":"Successfully updated!",
-    "successfully_Deleted!":"Successfully created!",
+    "successfully_Deleted!":"Successfully deleted!",
     "network_error": "Network Error",
     "method_not_allowed":"Method Not Allowed",
 
